@@ -1,3 +1,4 @@
+- display a warning when capslock is enabled and entering a password (#33028)
 - fix insmoding raid0 (#33172)
 
 Version 10.4.189 - 4 September 2007, by Thierry Vignaud
