@@ -1,3 +1,5 @@
+- display a warning when capslock is enabled and entering a password (#33028)
+
 Version 10.4.188 - 4 September 2007, by Thierry Vignaud
 
 - hardware detection layer:
